--- a/src/components/Friend/Chat/Chat.module.css
+++ b/src/components/Friend/Chat/Chat.module.css
@@ -40,7 +40,7 @@
 
 .Chat_box_send_img input{
     width: 100%;
-    background-color: beige;
+    background-color: rgb(255, 255, 0);
     outline: none;
     border: none;
     padding: 1rem;
